<resources>
    <string name="app_name">My App</string>
    <string name="his_name">Tom Holland</string>
    <string name="check">check me!</string>
    <string name="btn_label">结果为</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="dollar">Dollar</string>
    <string name="won">Won</string>
    <string name="euro">Euro</string>
    <string name="save">Save</string>
    <string name="label_list">open List</string>
    <string name="hello">Hello</string>
    <string name="noData">No Data</string>
    <string name="home">首页</string>
    <string name="func">功能</string>
    <string name="setting">设置</string>
</resources>
