<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MoneyActivity">

    <EditText
        android:id="@+id/rmd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/rmb_hint"
        android:inputType="numberDecimal" />
    <TextView
        android:id="@+id/show"
        android:textSize="28dp"
        android:text=""
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/dollar"
        android:text="@string/dollar"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/won"
        android:text="@string/won"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/euro"
        android:text="@string/euro"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>