<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentActivity">

    <fragment
        android:id="@+id/fragment_main"
        android:name="com.example.myapp.HomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"/>
    <fragment
        android:id="@+id/fragment_func"
        android:name="com.example.myapp.FuncFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"/>
    <fragment
        android:id="@+id/fragment_setting"
        android:name="com.example.myapp.SettingFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"/>

    <RadioGroup
        android:id="@+id/bottomGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioHome"
            style="@style/my_style"
            android:drawableTop="@drawable/check"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/radioFunc"
            style="@style/my_style"
            android:drawableTop="@drawable/check"
            android:text="@string/func" />

        <RadioButton
            android:id="@+id/radioSetting"
            style="@style/my_style"
            android:drawableTop="@drawable/check"
            android:text="@string/setting" />
    </RadioGroup>

</LinearLayout>